--- a/res.qrc
+++ b/res.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>images/DOWN.png</file>
         <file>images/UP.png</file>
+        <file>images/A22.png</file>
     </qresource>
 </RCC>
